2008-12-21  Ryan Lortie  <desrt@desrt.ca>

	Bug 564413 – Icon does not scale like launchers do

	* src/trashapplet.c (trash_applet_size_allocate):  set the size of the
	icon in the same way that the panel does for launchers.

==================== 2.25.2 ======================

2008-12-17  William Jon McCann  <jmccann@redhat.com>

	* Makefile.am: Add missing libgnomeui CFLAGS
	Patch from: lucasr.at.mundo@gmail.com
	(Bug #564192)

2008-11-14  Callum McKenzie  <callum@spooky-possum.org>

	* src/xstuff.h: Patch from Maxim Ermilov to rationalise
	GTK includes. See bug 560678.

==================== 2.24.0.1 ====================

2008-09-24  Callum McKenzie  <callum@spooky-possum.org>

	* src/trashapplet.c (trash_applet_monitor_changed): Don't unref
	the return value of g_file_info_get_icon, it isn't owned by
	us. This should fix 553418 (see also 552577).

2008-09-22  Callum McKenzie  <callum@spooky-possum.org>

	* src/trashapplet.c (trash_applet_monitor_changed): Fix a memory
	leak (Matthias Clasen / bug 552577).

2008-09-02  Callum McKenzie  <callum@spooky-possum.org>

	* GNOME_Panel_TrashApplet.server.in.in: Patch from Alexander Jones
	to make sure the trash applet keeps working on a second login. See
	bug #537011.

2008-08-14  Andre Klapper  <a9016009@gmx.de>

	* src/trashapplet.h: Remove left-over gnome-vfs include.
	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=509759#c10.

2008-05-31  Gabor Kelemen  <kelemeng@gnome.hu>

	* docs/Makefile.am: Added hu to DOC_LINGUAS.
	* docs/hu/hu.po: Added Hungarian translation by Máté Őry.

2008-05-01  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* docs/Makefile.am: Added pt_BR to DOC_LINGUAS.
	* docs/pt_BR/pt_BR.po: Added Brazilian Portuguese translation by
	Andrius da Costa Ribas.

2008-04-25  Callum McKenzie  <callum@spooky-possum.org>

	* src/trashapplet.c (trash_applet_size_allocate): Add a border of
	two pixels to the trash applet to make it not look so large. Patch
	from Matthias Clasen (bug #529579).
